stylesheets/application.css
/* ... */
/* Icon Overrides */
.icon-fav{
	background-image: url(../images/fav.png);
}
.icon-fav-off{
	background-image: url(../images/fav_off.png);
}

/* Plugins */
/* Changes for monitoring_controlling */
nav#menu {
	background: url(../images/bg_gradient_infobox.png) repeat scroll 0 0 #F3F3F3;
	background: -moz-linear-gradient(center top , #FFF, #F3F3F3) repeat scroll 0 0 #F3F3F3;
	background: -webkit-linear-gradient(center top , #FFF, #F3F3F3) repeat scroll 0 0 #F3F3F3;
	background: -o-linear-gradient(center top , #FFF, #F3F3F3) repeat scroll 0 0 #F3F3F3;
	background: linear-gradient(center top , #FFF, #F3F3F3) repeat scroll 0 0 #F3F3F3;
    margin: 0 -10px;
}

/* flowmenu enhancements */
#flowmenu input#q.small{
  width:0px;
  border-top:0;
  border-bottom:0;
  height:24px;
  background: #fff url(../images/magnifier.png) no-repeat 2px 50%;
  transition:width 1s;
  -ms-transition:width 1s;
  -webkit-transition:width 1s;
  -moz-transition:width 1s;
  -o-transition:width 1s;
  float:left;
  margin:0;
  padding:0 5px 0 20px;
  outline:none;
}

#flowmenu input#q.small:focus{
  width:200px;
}

#flowmenu{
  position:fixed;
  left:0px;
  right:0px;
  top:0px;
  height:auto;
  min-width:750px;
  z-index:1000;
  color:#000;
  display:none;
}

#flowmenu span#logosmall {
    background: url("../images/logo_small.png") no-repeat scroll 50% 50% transparent;
    float:left;
    width:50px;
}

#flowmenu .selector-div select{
  height:22px;
  width:240px;
  margin:0;
  float:left;
  background:#ecf0f1;
  border:0;
  -webkit-appearance: none;
  line-height: 1;
}

#flowmenu .selector-div{
  height:22px;
  width:240px;
  overflow:hidden;
  background:#ddd;
  border: 1px solid #ccc;
}

#flowmenu div#loggedas{
  float:right;
  padding:0 5px 0 10px;
  line-height:24px;
}

#flowmenu #sidebar-switch{
	display:block;
	float:right;
	height:24px;
	width:24px;
  margin:0;
}
#flowmenu #sidebar-switch:hover{
	background-color:#F5F5F5;
	-moz-box-shadow:0 0 4px 1px #DDD;
	-webkit-box-shadow:0 0 4px 1px #DDD;
	box-shadow:0 0 4px 1px #DDD;
}
#flowmenu #sidebar-switch > div{
	height:24px;
	width:24px;
	background:url(../images/sidebar_icons_small.png) no-repeat;
	cursor:pointer;
}
#flowmenu #sidebar-switch > div.disabled{
	background-position:0 -48px;
	cursor:not-allowed;
}
#flowmenu #sidebar-switch > div.expanded{
	background-position:0 -24px;
	transition: background 0.5s;
	-webkit-transition: background 0.5s; /* Safari */
}
#flowmenu #sidebar-switch > div.expanded:hover{
	background-position:0 0;
}
#flowmenu #sidebar-switch > div.collapsed:hover{
	background-position:0 -24px;
}

#flowmenu #menu-switch{
	float:right;
	height:24px;
	padding:0 1px;
	background:url(../images/menu.png) no-repeat 50% 50%;
	background-color:#2980B9;
	transition:background .5s;
	-webkit-transition:background .5s;
}
#flowmenu #menu-switch.activated{
    height:25px;
}
#flowmenu #menu-switch:hover{
	background-color:#4480cf;
	cursor:pointer;
}

#flowmenu #filter-switch{
  display:block;
  background:url(../images/filter.png) no-repeat 50% 50%;
}

#flowmenu .pictureDiv{
  width:24px;
	cursor:pointer;
	/*transition: background 0.5s;
	-webkit-transition: background 0.5s;*/ /* Safari */  
}

#flowmenu #filter-switch:hover{
	-moz-box-shadow:0 0 4px 1px #DDD;
	-webkit-box-shadow:0 0 4px 1px #DDD;
	box-shadow:0 0 4px 1px #DDD;
}

#flowmenu #additional{
  display:none;
  background-color:#FFF;
}

#flowmenu .icons{
  position:relative;
  display:block;
  clear:both;
  height:24px;
  background-color:#FFF;
  border-bottom:1px solid #222;
}

#flowmenu .flowicon{
  float:left;
  height:24px;
}

#flowmenu .contextual{
  position:relative;
  float:none;
  background-color:#F3F3F3;
  background:url(../images/bg_gradient_infobox.png) repeat scroll 0 0 #F3F3F3;
  background:-moz-linear-gradient(center top , #FFF, #F3F3F3) repeat scroll 0 0 #F3F3F3;
  background:-webkit-linear-gradient(center top , #FFF, #F3F3F3) repeat scroll 0 0 #F3F3F3;
  background:-o-linear-gradient(center top , #FFF, #F3F3F3) repeat scroll 0 0 #F3F3F3;
  background:linear-gradient(center top , #FFF, #F3F3F3) repeat scroll 0 0 #F3F3F3;
  margin:-1px 0 0 0;
  border:0;
  padding:2px 10px;
  height:18px;
  border-top:1px solid #222;
  border-bottom:1px solid #222;
}
#flowmenu .contextual > a{
  color:#000;
}

#flowmenu #main-menu  > ul{
  margin:0;
}

#flowmenu #filter{
  padding:2px 0;
  border-bottom:1px solid #222;
}

